# therepo

./: .gitignore
advent_of_code/: Cargo.toml
advent_of_code/inputs/: input_18_test
advent_of_code/src/: common.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  main.rs
cube_solver/: Cargo.toml  README.md
cube_solver/src/: application.rs  camera.rs  cube_shader.wgsl  cubes.rs  main.rs  renderer.rs  solver.rs  texture.rs
falling_sand/: CMakeLists.txt  README.md
falling_sand/assets/config/: falling_sand_config.yml  sandbox_config.yml  window_config.yml
falling_sand/src/falling_sand/: CellSystem.cpp  CellSystem.hpp  MainState.cpp  MainState.hpp  RenderSystem.cpp  RenderSystem.hpp  SandboxConfig.hpp  main.cpp
falling_sand/src/falling_sand/math/: BitSet.cpp  BitSet.hpp
falling_sand/src/falling_sand/sim/: CellSim.cpp  CellSim.hpp  CellSystem.cpp  CellSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Sandbox.cpp  Sandbox.hpp  SandboxConfig.hpp  cell.cpp  cell.hpp  particles.cpp  particles.hpp  squares.cpp  squares.hpp
falling_sand/src/falling_sand/sim/cells/: cells.cpp  cells.hpp
falling_sand/src/falling_sand/ui/: Brush.cpp  Brush.hpp  InputSystem.cpp  InputSystem.hpp  Toolbox.cpp  Toolbox.hpp
flood/: Cargo.toml
flood/src/: main.rs
game_of_life/: Cargo.toml
game_of_life/src/: gol.rs  main.rs  renderer.rs
lightbikes/: CMakeLists.txt  README.md  conanfile.txt
lightbikes/assets/config/: app_config.yml
lightbikes/src/: main.cpp
lightbikes/src/lightbikes/: AppConfig.hpp
lightbikes/src/lightbikes/components/: Lightbike.hpp  LightbikePath.hpp  Position.hpp
lightbikes/src/lightbikes/input/: InputState.cpp  InputState.hpp  InputSystem.cpp  InputSystem.hpp
lightbikes/src/lightbikes/lightbikes/: DuelConfig.hpp  systems.cpp  systems.hpp
lightbikes/src/lightbikes/networking/: ConnectionManager.cpp  ConnectionManager.hpp  GameStatePacket.hpp  NetworkInputManager.cpp  NetworkInputManager.hpp  NetworkingSystem.cpp  NetworkingSystem.hpp  PlayerInputPacket.hpp
lightbikes/src/lightbikes/rendering/: Camera.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderable.hpp
lightbikes/src/lightbikes/states/: LightbikeDuelState.cpp  LightbikeDuelState.hpp
lightbikes/src/lightbikes/utils/: RingBuffer.hpp  RingBuffer.test.cpp
rust/artificial_life/: Cargo.toml
rust/artificial_life/src/: grid.rs  main.rs  simulation.rs  time.rs
rust/monkey_interpreter/src/: lexer.rs  main.rs  parser.rs  repl.rs  token.rs
rust/nbody_simulation/: Cargo.toml
rust/nbody_simulation/src/: main.rs  quadtree.rs  simulation.rs  time.rs
rust/protohackers/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
rust/protohackers/src/: budget_chat.rs  main.rs  means_to_end.rs  mob_in_the_middle.rs  prime_time.rs  speed_daemon.rs  test_runner.rs  udpdb.rs
rust/protohackers/src/speed_daemon/: client_session.rs  events.rs  mod.rs  server.rs  ticket.rs
rust/protohackers/src/test_inputs/: prime_time.txt
rust_games/: Cargo.toml
rust_games/flood/: Cargo.toml
rust_games/flood/src/: flood.rs  grid.rs  infrastructure.rs  main.rs  mobs.rs  movement.rs  z_levels.rs
rust_games/flood/src/logistics/: README.md  connection_graph.rs  ecs.rs  inventory.rs  mod.rs  network.rs  packets.rs
rust_games/flood/src/towers/: mod.rs  towers.rs
rust_games/flood/src/ui/: mod.rs
rust_games/hindsight/: Cargo.toml
rust_games/hindsight/src/: duel.rs  hindsight.rs  input.rs  main.rs  time.rs
rust_games/hindsight/src/hindsight/: input_buffer.rs  mod.rs  ring_buffer.rs  session.rs
rust_games/lightbikes/: Cargo.toml
rust_games/lightbikes/src/: main.rs
rust_games/tetris/: Cargo.toml
rust_games/tetris/src/: main.rs
rust_games/tetris/src/game/: field.rs  game.rs  input.rs  mod.rs
sandbox/src/: main.rs
squish/: Cargo.toml
squish/src/: application.rs  main.rs
squish/src/rendering/: camera.rs  mod.rs  renderer.rs  texture.rs
squish/src/rendering/shaders/: point_shader.wgsl
squish/src/squish/: entities.rs  math.rs  mod.rs  world.rs
synacor_challenge/: Cargo.toml
synacor_challenge/spec/: README.md
synacor_challenge/src/: main.rs
synacor_challenge/src/synacorvm/: mod.rs  operations.rs  storage.rs  virtual_machine.rs
wellgrav/: Cargo.toml
wellgrav/assets/config/: config.gameconfig  config.playerconfig
wellgrav/src/: app_state.rs  asset_loading.rs  collisions.rs  enemies.rs  main.rs  physics.rs  player.rs  resources.rs  ships.rs
yage/: CMakeLists.txt  README.md  YageConfig.h.in  yage.cxx
yage/assets/config/: window_config.yml
yage/include/yage/: window.h  yage.h
yage/src/: yage.cxx
yage/src/yage/: Family.hpp  FrameRateLimiter.cpp  FrameRateLimiter.hpp  Game.cpp  Game.hpp  GameState.hpp  GameSystem.hpp  NoCopy.hpp  Resources.cpp  Resources.hpp  Time.cpp  Time.hpp  World.cpp  World.hpp  YageException.cpp  YageException.hpp  math.cpp  math.hpp  yage.hpp
yage/src/yage/physics/: BoundingBox.cpp  BoundingBox.hpp
yage/src/yage/window/: WindowConfig.h  window.cpp  window.hpp
