[package]
name = "squish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

winit = "0.28.2"
wgpu = "0.14"
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"]}
cgmath = { version = "0.18.0", features =["swizzle"]}
anyhow = "1.0.69"