[package]
name = "flood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_prototype_debug_lines = "0.8.1"
bevy_prototype_lyon = "0.6.0"
iyes_loopless = "0.7.1"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
